[tool.poetry]
name = "ghost-your-be"
version = "0.1.0"
description = "Công cụ CLI tạo dữ liệu giả, mock API và so sánh API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ghost-your-be" }]

[tool.poetry.dependencies]
python = ">=3.8,<=3.13.3"
click = "^8.0"
faker = "^18.0"
pydantic = "^2.0"
pyyaml = "^6.0"
sqlalchemy = "^2.0"
pymongo = "^4.0"
fastapi = "^0.100"
uvicorn = "^0.20"
deepdiff = "^6.0"
rich = "^13.0"
requests = "^2.28"
pymysql = "^1.1.1"

[tool.poetry.scripts]
ghost-your-be = "ghost-your-be.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
